added https setup to webserver and refactored oidc

--- a/data/nginx/recipe-dev.conf
+++ b/data/nginx/recipe-dev.conf
@@ -3,6 +3,18 @@ server {
     listen [::]:80;
 
     location / {
+       return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+
+    ssl_certificate /certs/nginx.crt;
+    ssl_certificate_key /certs/nginx.key;
+
+    location / {
         proxy_pass http://frontend-dev:5173;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -17,7 +29,7 @@ server {
     }
 
     location ~ ^/(api|docs) {
-        proxy_pass http://webserver-dev:8432;
+        proxy_pass http://webserver-dev:8080;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
