--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -5,9 +5,11 @@ services:
     depends_on: [ ]
     networks: [ net-food-dev ]
     ports:
-      - "127.0.0.1:8443:80"
+      - "127.0.0.1:8443:443"
     volumes:
-      - ./build/nginx/food-dev.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./data/nginx/recipe-dev.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./data/nginx/recipe-dev.crt:/certs/nginx.crt:ro
+      - ./data/nginx/recipe-dev.key:/certs/nginx.key:ro
     build:
       dockerfile: ./build/dockerfiles/nginx-dev.Dockerfile
 
